force-app/main/default/objects/Case/fields/Case_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Case_Outcome__c</fullName>
    <label>Case Outcome</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>