force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <label>Case Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Product Feedback</fullName>
            </value>
            <value>
                <fullName>General Feedback (non-product)</fullName>
            </value>
            <value>
                <fullName>Health Issue</fullName>
            </value>
            <value>
                <fullName>New Product Feedback</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Service Complaints</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>