force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abnormal smell / flavor</fullName>
            </value>
            <value>
                <fullName>Air Bubbles</fullName>
            </value>
            <value>
                <fullName>Allergic Reaction</fullName>
            </value>
            <value>
                <fullName>Brittle</fullName>
            </value>
            <value>
                <fullName>Cannot mix well</fullName>
            </value>
            <value>
                <fullName>Clumped together</fullName>
            </value>
            <value>
                <fullName>Color issue</fullName>
            </value>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Contents are leaking</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Dried Out</fullName>
            </value>
            <value>
                <fullName>Easy to lose toothbrush bristles</fullName>
            </value>
            <value>
                <fullName>Extrusion defect (Cartridge &amp; Capsule)</fullName>
            </value>
            <value>
                <fullName>Hardened / High viscosity</fullName>
            </value>
            <value>
                <fullName>Liquid / Paste is separating</fullName>
            </value>
            <value>
                <fullName>Malfunction (Dental equipment)</fullName>
            </value>
            <value>
                <fullName>Milling</fullName>
            </value>
            <value>
                <fullName>Missing / Incorrect Contents</fullName>
            </value>
            <value>
                <fullName>Packaging issue</fullName>
            </value>
            <value>
                <fullName>Restoration Cracks</fullName>
            </value>
            <value>
                <fullName>Restoration fall out</fullName>
            </value>
            <value>
                <fullName>Rough Surface</fullName>
            </value>
            <value>
                <fullName>Rusty / Corrosion</fullName>
            </value>
            <value>
                <fullName>Setting time is too fast</fullName>
            </value>
            <value>
                <fullName>Setting time is too late</fullName>
            </value>
            <value>
                <fullName>Sticky</fullName>
            </value>
            <value>
                <fullName>Too soft / Low viscosity</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>