force-app/main/default/objects/Case/fields/Investigation_Result_L2__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Result_L2__c</fullName>
    <label>Investigation Result (L2)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>