force-app/main/default/objects/Case/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>