force-app/main/default/objects/Case/fields/Nature_of_VOC__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_VOC__c</fullName>
    <label>Nature of VOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>