force-app/main/default/objects/Case/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>true</active>
    <businessProcess>Complaint</businessProcess>
    <description>Refer to the complaint made by customer, for product and non-product related. (Service Complaints, Health Issue, or Product Issue)</description>
    <label>Complaint</label>
</RecordType>