force-app/main/default/objects/Case/recordTypes/VOC.recordType-meta.xml
<RecordType>
    <fullName>VOC</fullName>
    <active>true</active>
    <businessProcess>VOC</businessProcess>
    <description>Refers to the feedback given by customer, both negative and positive.</description>
    <label>VOC</label>
</RecordType>