force-app/main/default/objects/Case/validationRules/Cannot_close_L1_Investigation_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_close_L1_Investigation_Blank</fullName>
    <active>true</active>
    <description>The case cannot be closed (L1 Closed) if the Investigation Result (L1) is not populated.</description>
    <errorConditionFormula>IF(
ISPICKVAL( Status , &apos;L1 Closed&apos;) &amp;&amp;  ISBLANK(Investigation_Result_L1__c),
TRUE,
FALSE
)</errorConditionFormula>
    <errorDisplayField>Investigation_Result_L1__c</errorDisplayField>
    <errorMessage>The case cannot be closed (L1 Closed) if the Investigation Result (L1) is not populated.</errorMessage>
</ValidationRule>