force-app/main/default/objects/Case/validationRules/Case_Critical_Origin_Web.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Critical_Origin_Web</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Support_Priority__c, &quot;Critical&quot;), ISPICKVAL(Origin, &quot;Web&quot;))</errorConditionFormula>
    <errorDisplayField>Origin</errorDisplayField>
    <errorMessage>Critical priority cases cannot be submitted via the Web channel. Please use Phone or Email.</errorMessage>
</ValidationRule>