force-app/main/default/objects/Case/validationRules/ServiceCompaint_Cant_Escalate.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceCompaint_Cant_Escalate</fullName>
    <active>true</active>
    <description>User cannot escalate cases with service complaint sub type</description>
    <errorConditionFormula>ISPICKVAL( Case_Sub_Type__c, &apos;Service Complaints&apos;) &amp;&amp; (ISPICKVAL(Status, &apos;Escalated to L2&apos;) || ISPICKVAL(Status, &apos;L2 Closed&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Service Complaint case cannot be escalated to L2</errorMessage>
</ValidationRule>