force-app/main/default/objects/Case/listViews/All_Health_Complaint_Case.listView-meta.xml
<ListView>
    <fullName>All_Health_Complaint_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Dealer__c</columns>
    <columns>PRODUCT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Complaint</value>
    </filters>
    <filters>
        <field>Case_Sub_Type__c</field>
        <operation>equals</operation>
        <value>Health Issue</value>
    </filters>
    <label>All Health Complaint Cases</label>
</ListView>