force-app/main/default/objects/Case/listViews/All_Product_Health_Complaints_Not_Closed.listView-meta.xml
<ListView>
    <fullName>All_Product_Health_Complaints_Not_Closed</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Dealer__c</columns>
    <columns>PRODUCT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Complaint</value>
    </filters>
    <filters>
        <field>Case_Sub_Type__c</field>
        <operation>equals</operation>
        <value>Health Issue,Product Issue</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Open,Escalated to L2</value>
    </filters>
    <label>All Product/Health Complaints Not Closed</label>
</ListView>