force-app/main/default/objects/Case/listViews/All_VOC_Case.listView-meta.xml
<ListView>
    <fullName>All_VOC_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.VOC</value>
    </filters>
    <label>All VOC Cases</label>
</ListView>